[gd_scene load_steps=4 format=3 uid="uid://bo37wn5msx4ck"]

[ext_resource type="Script" path="res://Scenes/QuestionManager.gd" id="1_qlsdx"]
[ext_resource type="PackedScene" uid="uid://clllbf6am8qdf" path="res://addons/silent_wolf/common/SWButton.tscn" id="2_vx2bf"]
[ext_resource type="Texture2D" uid="uid://c35jbmcdqa0aq" path="res://Art/Lucid V1.2/PNG/Flat/64/Chevron-Arrow-Left.png" id="3_jxawc"]

[node name="PracticeQuestion" type="Node2D"]
script = ExtResource("1_qlsdx")

[node name="PlayerNameLabel" type="Label" parent="."]
offset_left = 126.0
offset_top = 151.0
offset_right = 377.0
offset_bottom = 174.0
text = "Player Name
"

[node name="QuestionLabel" type="Label" parent="."]
offset_left = 381.0
offset_top = 198.0
offset_right = 703.0
offset_bottom = 221.0
size_flags_horizontal = 4
text = "Question
"

[node name="AnswerInput" type="LineEdit" parent="."]
offset_left = 368.0
offset_top = 263.0
offset_right = 730.0
offset_bottom = 294.0

[node name="SubmitButton" type="Button" parent="."]
offset_left = 393.0
offset_top = 326.0
offset_right = 511.0
offset_bottom = 375.0
text = "Submit
"

[node name="ScoreLabel" type="Label" parent="."]
offset_left = 379.0
offset_top = 492.0
offset_right = 720.0
offset_bottom = 515.0
text = "Score"

[node name="Timer" type="Timer" parent="."]

[node name="AIIndicator" type="Label" parent="."]
offset_left = 778.0
offset_top = 141.0
offset_right = 986.0
offset_bottom = 164.0
text = "AI indicator"

[node name="TryAgainButton" type="Button" parent="."]
offset_left = 572.0
offset_top = 336.0
offset_right = 706.0
offset_bottom = 376.0
text = "Try Again"

[node name="DifficultyLabel" type="Label" parent="."]
offset_left = 144.0
offset_top = 418.0
offset_right = 422.0
offset_bottom = 441.0
text = "Difficulty"

[node name="BackButton" parent="." instance=ExtResource("2_vx2bf")]
offset_left = 79.0
offset_top = 64.0
offset_right = 115.0
offset_bottom = 120.0
text = ""
icon = ExtResource("3_jxawc")
flat = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
